chore: 更新测试配置和评分脚本，优化代码格式和注释
- 更新了评分脚本的测试配置，匹配新的项目结构
- 优化了部分代码的格式和注释，提升代码可读性
- 修复了测试文件中的导入路径问题
- 更新了评分结果文件和相关的测试数据

--- a/薛定谔方程/项目说明.md
+++ b/薛定谔方程/项目说明.md
@@ -8,8 +8,8 @@
 
 $$
 \tan\sqrt{w^2mE/2\hbar^2}=\left\{\begin{aligned}
-\sqrt{(V-E)/E},&\quad \mbox{偶宇称}\\
--\sqrt{E/(V-E)},&\quad \mbox{奇宇称}
+\sqrt{(V-E)/E},&\quad {偶宇称}\\
+-\sqrt{E/(V-E)},&\quad {奇宇称}
 \end{aligned}
 \right.
 $$
