docs: 更新项目任务中的理论推导部分
修正理论推导部分的描述，明确方程中的参数并格式化数学公式，以提高文档的清晰度和可读性。

--- a/拉格朗日点/项目说明.md
+++ b/拉格朗日点/项目说明.md
@@ -9,9 +9,9 @@
 ## 项目任务
 
 1. **理论推导**：
-   - 设轨道是圆形的，并假设地球比月亮和卫星的质量大得多
-   - 推导从地心到L1点的距离r满足的方程
-   - 注意：方程中的参数包括地球质量M、月球质量m、万有引力常数G、月球和卫星的角速度ω
+   并假设地球比月亮和卫星的质量大得多, 请说明从地心到$L_1$点的距离$r$满足
+	$$\frac{GM}{r^2}-\frac{Gm}{(R-r)^2}=\omega^2r, $$
+   其中$M$和$m$分别是地球和月亮的质量, $G$是万有引力常数, $\omega$是月亮和卫星的角速度.
 
 2. **数值求解**：
    - 使用切线法（牛顿法）或弦截法求解L1点的位置r
