refactor(太阳黑子分析): 重构代码结构，简化实现并移除冗余功能
重构太阳黑子数据分析模块，移除数据下载功能，简化代码实现。调整函数命名和逻辑，使其更易读和维护。更新测试用例以匹配新实现。

--- a/拉格朗日点/项目说明.md
+++ b/拉格朗日点/项目说明.md
@@ -4,6 +4,8 @@
 
 拉格朗日点是天体力学中的特殊位置，在这些点上，小质量天体可以相对于两个大质量天体保持静止。在地球-月球系统中，L1拉格朗日点位于地球和月球之间，是一个特别重要的位置，因为放置在这里的卫星可以同时观测地球和月球，并且保持相对静止的位置。
 
+![地球-月球系统中的L1拉格朗日点示意图](l1.png)
+
 在本项目中，我们将通过数值方法求解地球-月球系统中L1拉格朗日点的位置。这个问题涉及到求解一个高次多项式方程，需要使用迭代法（如切线法或弦截法）来获得高精度的数值解。
 
 ## 项目任务
