修改了一些文件

--- a/傅立叶滤波和平滑/项目说明.md
+++ b/傅立叶滤波和平滑/项目说明.md
@@ -1,60 +1,45 @@
-# 项目4：傅立叶滤波和平滑
+# 项目4：傅立叶滤波实验
 
 ## 项目介绍
 
-傅立叶变换不仅可以用于分析信号的频率成分，还可以用于信号的滤波和平滑处理。通过在频域中选择性地保留或抑制某些频率成分，我们可以实现对信号的低通滤波（保留低频成分，抑制高频成分）、高通滤波（保留高频成分，抑制低频成分）或带通滤波（保留特定频带内的成分）。
-
-在本项目中，我们将使用傅立叶变换对道琼斯工业平均指数（DJIA）的历史数据进行滤波和平滑处理。通过这个过程，我们可以分离出股票市场的长期趋势、季节性波动和短期噪声，从而更好地理解市场的运行规律。
+本实验通过傅立叶变换对道琼斯工业平均指数数据进行滤波处理，观察不同频率成分对信号的影响。通过保留/抑制特定频率成分，我们可以提取信号的不同特征。
 
 ## 项目任务
 
-1. **数据获取与可视化**：
-   - 从提供的数据文件中读取道琼斯工业平均指数的历史数据
-   - 数据包括从1896年5月26日到2022年的每日收盘价
-   - 绘制原始数据的时间序列图，观察其长期趋势和波动特征
+*dow.txt*文件包含了自2006年下半年到2010年年终期间每一个交易日结束时道琼斯工业平均指数的值。
 
-2. **傅立叶变换与频谱分析**：
-   - 对道琼斯指数数据进行傅立叶变换
-   - 计算并绘制功率谱，观察不同频率成分的分布
-   - 分析功率谱中的主要特征，如低频趋势、季节性波动和高频噪声
+### 任务1：数据加载与可视化
+1. 读入`dow.txt`文件中的数据
+2. 绘制原始数据的时间序列图
+3. 添加适当的坐标轴标签和标题
 
-3. **低通滤波实现**：
-   - 设计一个低通滤波器，只保留低频成分（长期趋势）
-   - 对傅立叶变换后的频谱应用低通滤波器
-   - 进行逆傅立叶变换，得到滤波后的时间序列
-   - 绘制滤波后的数据，与原始数据进行比较
+### 任务2：傅立叶变换与滤波
+1. 使用`numpy.fft.rfft`计算离散傅里叶变换系数
+2. 将数组的后90%系数设为0（保留前10%）
+3. 使用`numpy.fft.irfft`计算逆变换
+4. 在同一图中绘制原始数据和滤波后的数据
+5. 分析滤波效果：高频成分被抑制后信号的变化
 
-4. **高通滤波实现**：
-   - 设计一个高通滤波器，只保留高频成分（短期波动）
-   - 对傅立叶变换后的频谱应用高通滤波器
-   - 进行逆傅立叶变换，得到滤波后的时间序列
-   - 绘制滤波后的数据，与原始数据进行比较
+### 任务3：修改滤波参数
+1. 修改程序，将后98%的傅里叶系数设为0（保留前2%）
+2. 重复上述步骤并比较结果
+3. 分析保留更少频率成分对信号的影响
 
-5. **带通滤波实现**（可选）：
-   - 设计一个带通滤波器，保留特定频带内的成分（如季节性波动）
-   - 对傅立叶变换后的频谱应用带通滤波器
-   - 进行逆傅立叶变换，得到滤波后的时间序列
-   - 绘制滤波后的数据，与原始数据进行比较
+## 技术要点
 
-## 提示与资源
+1. **傅立叶变换**：
+   - 使用`np.fft.rfft`计算实数信号的傅里叶变换
+   - 注意变换系数的对称性和排列顺序
 
-1. **数据处理**：
-   - 道琼斯指数数据可能包含缺失值（如节假日），需要进行适当处理
-   - 考虑对数据进行对数变换，使其更适合傅立叶分析
-   - 在进行傅立叶变换前，可能需要对数据进行去趋势处理
+2. **滤波实现**：
+   ```python
+   # 保留前10%系数示例
+   coeff = np.fft.rfft(data)
+   cutoff = int(len(coeff) * 0.1)
+   coeff[cutoff:] = 0  # 将后90%系数设为0
+   filtered = np.fft.irfft(coeff)
+   ```
 
-2. **傅立叶变换**：
-   - 使用NumPy的fft模块进行傅立叶变换和逆变换，如np.fft.fft和np.fft.ifft函数
-   - 注意处理实数信号的傅立叶变换的特性（如共轭对称性）
-
-3. **滤波器设计**：
-   - 低通滤波器可以通过设置截止频率，将高于该频率的成分置零来实现
-   - 高通滤波器可以通过设置截止频率，将低于该频率的成分置零来实现
-   - 带通滤波器可以通过设置上下截止频率，只保留该频带内的成分来实现
-   - 为避免滤波器的尖锐截断导致的振铃效应，可以使用平滑过渡的滤波器（如高斯滤波器）
-
-4. **可视化建议**：
-   - 在同一图中绘制原始数据和滤波后的数据，以便直观比较
-   - 使用不同颜色和线型区分不同的数据系列
-   - 添加适当的图例、标题和轴标签
-   - 考虑使用对数刻度显示功率谱
+3. **可视化建议 ：**
+- 使用不同颜色区分原始数据和滤波结果
+- 添加图例说明
