--- a/傅立叶滤波和平滑/实验报告模板.md
+++ b/傅立叶滤波和平滑/实验报告模板.md
@@ -2,19 +2,19 @@
 
 ## 1. 实验目的
 
-本实验旨在通过傅立叶变换对道琼斯工业平均指数的历史数据进行滤波和平滑处理，具体目标包括：
-- 学习傅立叶变换在信号处理中的应用
-- 掌握低通滤波、高通滤波和带通滤波的实现方法
-- 理解频域滤波对时域信号的影响
-- 分析金融时间序列中的不同频率成分及其经济意义
+本实验旨在通过对道琼斯工业平均指数数据进行傅立叶变换和滤波处理，达到以下目标：
+- 掌握傅立叶变换在金融时间序列分析中的应用
+- 理解不同频率成分对信号的影响
+- 学习通过频域滤波提取信号特征的方法
+- 分析滤波参数变化对结果的影响
 
 ## 2. 方法简述
 
 请简要描述您实现的算法和方法，特别是：
-- 数据预处理的方法
+- 数据加载和预处理的方法
 - 傅立叶变换和逆变换的实现
-- 各类滤波器的设计原理和实现方式
-- 滤波参数的选择依据
+- 滤波器的设计原理（保留前10%和前2%系数的实现）
+- 可视化方法的选择
 
 _在此处填写您的方法描述（约200-300字）_
 
@@ -22,92 +22,76 @@ _在此处填写您的方法描述（约200-300字）_
 
 ### 3.1 原始数据时间序列
 
-请在此处粘贴您生成的道琼斯工业平均指数原始数据时间序列图，并简要说明您从图中观察到的特征。
+请在此处粘贴您生成的道琼斯工业平均指数原始数据时间序列图，并说明您从图中观察到的特征。
 
 _在此处插入原始数据时间序列图像_
 
 图像说明：
 _在此处添加对图像的解释（约100字）_
 
-### 3.2 功率谱分析
+### 3.2 保留前10%系数的滤波结果
 
-请在此处粘贴您生成的功率谱图像，并说明您从中观察到的主要频率成分。
+请在此处粘贴您生成的保留前10%傅立叶系数的滤波结果图像，并说明：
+1. 滤波后信号与原始信号的差异
+2. 被抑制的频率成分对信号的影响
 
-_在此处插入功率谱图像_
-
-图像说明：
-_在此处添加对图像的解释（约100字）_
-
-### 3.3 低通滤波结果
-
-请在此处粘贴您生成的低通滤波结果图像，并说明滤波后保留了哪些特征。
-
-_在此处插入低通滤波结果图像_
+_在此处插入10%滤波结果图像_
 
 图像说明：
 _在此处添加对图像的解释（约100字）_
 
-### 3.4 高通滤波结果
+### 3.3 保留前2%系数的滤波结果
 
-请在此处粘贴您生成的高通滤波结果图像，并说明滤波后保留了哪些特征。
+请在此处粘贴您生成的保留前2%傅立叶系数的滤波结果图像，并说明：
+1. 与10%滤波结果的对比
+2. 更严格滤波对信号的影响
 
-_在此处插入高通滤波结果图像_
-
-图像说明：
-_在此处添加对图像的解释（约100字）_
-
-### 3.5 带通滤波结果（可选）
-
-请在此处粘贴您生成的带通滤波结果图像，并说明滤波后保留了哪些特征。
-
-_在此处插入带通滤波结果图像_
+_在此处插入2%滤波结果图像_
 
 图像说明：
 _在此处添加对图像的解释（约100字）_
 
 ## 4. 分析与讨论
 
-### 4.1 不同频率成分的经济意义
+### 4.1 不同滤波参数的影响
 
-请讨论道琼斯指数中不同频率成分可能代表的经济现象：
-- 低频成分（长期趋势）反映了什么经济因素？
-- 中频成分（季节性波动）可能与哪些经济周期相关？
-- 高频成分（短期波动）通常由什么因素引起？
+请讨论：
+- 保留10%系数与保留2%系数结果的差异
+- 不同滤波强度对信号平滑程度的影响
+- 过度滤波可能导致的问题
 
 _在此处填写您的分析（约200字）_
 
-### 4.2 滤波器设计的考量
+### 4.2 金融时间序列的频率特征
 
-讨论在设计滤波器时需要考虑的因素：
-- 截止频率的选择依据是什么？
-- 为什么需要平滑过渡的滤波器而不是硬截断？
-- 不同类型滤波器（如高斯滤波器、巴特沃斯滤波器等）的优缺点是什么？
+讨论道琼斯指数中不同频率成分可能代表的经济现象：
+- 低频成分（长期趋势）反映了什么经济因素？
+- 高频成分（短期波动）通常由什么因素引起？
 
 _在此处填写您的讨论（约200字）_
 
 ### 4.3 思考题
 
-1. 如果我们对道琼斯指数数据进行对数变换后再进行傅立叶分析，结果会有什么不同？为什么？
+1. 如果我们对道琼斯指数数据进行对数变换后再进行傅立叶分析，结果会有什么不同？
 
 _在此处填写您的回答（约100字）_
 
-2. 傅立叶变换假设信号是周期性的，但金融数据通常不是严格周期性的。这会导致什么问题？有哪些方法可以减轻这些问题？
-
-_在此处填写您的回答（约100字）_
-
-3. 除了傅立叶变换外，还有哪些时频分析方法可以用于金融时间序列？它们与傅立叶变换相比有什么优势？
+2. 傅立叶变换假设信号是周期性的，但金融数据通常不是严格周期性的。这会导致什么问题？
 
 _在此处填写您的回答（约100字）_
 
 ## 5. 结论
 
-总结本实验的主要发现和收获，包括对傅立叶滤波在金融数据分析中应用的认识。
+总结本实验的主要发现和收获，包括：
+- 傅立叶滤波在金融数据分析中的应用价值
+- 不同滤波参数的选择经验
+- 实验过程中遇到的挑战和解决方法
 
 _在此处填写您的结论（约150字）_
 
 ## 核心代码片段
 
-请粘贴您实现的关键函数代码（如滤波器设计和应用），并简要说明代码的核心思路。
+请粘贴您实现的关键函数代码（如滤波函数实现），并简要说明代码的核心思路。
 
 ```python
 # 在此处粘贴核心代码片段（不超过30行）
