--- a/白炽灯的温度/项目说明.md
+++ b/白炽灯的温度/项目说明.md
@@ -1,54 +1,59 @@
-# 项目5：白炽灯的温度
 
-## 项目介绍
+## 项目5：白炽灯效率优化
 
-白炽灯是一种常见的照明设备，其工作原理是通过电流加热灯丝使其发光。灯丝的温度越高，发出的光越亮，但同时能量损耗也越大。在本项目中，我们将研究白炽灯的效率与温度的关系，并寻找最佳工作温度。
+### 1. 项目简介
 
-白炽灯的效率可以通过可见光辐射功率与总辐射功率的比值来衡量。根据普朗克黑体辐射定律，物体在不同温度下辐射的能量分布是不同的。温度越高，辐射的总能量越大，且能量分布的峰值向短波长方向移动。
+本项目通过计算物理方法，基于普朗克辐射定律，研究白炽灯发光效率 $\eta$ 与灯丝温度 $T$ 的关系，旨在通过数值计算找到使效率最大化的最优温度，并分析其可行性。
 
-我们的目标是计算不同温度下白炽灯的效率，并找出使效率最大的温度。这将涉及到数值积分和最优化方法的应用。
+### 2. 项目目标
 
-## 项目任务
+1.  **实现效率计算：** 编写Python程序，以温度 $T$ 为参数，利用数值积分计算白炽灯的发光效率 $\eta$。
+2.  **参数分析与可视化：** 绘制 $\eta$ 随 $T$ (300 K - 10,000 K) 变化的曲线图。
+3.  **最优化：** 应用黄金分割法，计算使效率 $\eta$ 达到最大的最优温度 $T_{opt}$ (精度 1 K)。
+4.  **可行性分析：** 结合钨丝物理特性，讨论 $T_{opt}$ 在实际应用中的可行性。
 
-1. **普朗克黑体辐射公式的实现**：
-   - 实现普朗克黑体辐射公式，计算在给定温度下，特定波长的辐射强度
-   - 绘制不同温度下的黑体辐射谱，观察温度对辐射谱的影响
+### 3. 核心理论
 
-2. **可见光效率的计算**：
-   - 定义可见光波长范围（通常为380-780nm）
-   - 计算给定温度下，可见光波长范围内的辐射功率
-   - 计算给定温度下，全波长范围内的总辐射功率
-   - 计算可见光效率（可见光辐射功率/总辐射功率）
+发光效率 $\eta(T)$ 由下式给出，其中 $x=hc/\lambda k_BT$：
 
-3. **最佳温度的确定**：
-   - 计算不同温度下白炽灯的效率
-   - 绘制效率与温度的关系曲线
-   - 使用黄金分割法或其他数值方法找出使效率最大的温度
-   - 比较计算结果与实际白炽灯工作温度（约2700K）的差异
+$$
+\eta(T) = {15\over\pi^4} \int_{hc/(\lambda_2 k_BT)}^{hc/(\lambda_1 k_BT)} {x^3\over e^x-1} d x
+$$
 
-## 提示与资源
+可见光波段为 $\lambda_1=390 \text{ nm}$ 到 $\lambda_2=750 \text{ nm}$。积分需数值求解。
 
-1. **普朗克黑体辐射公式**：
-   - 普朗克黑体辐射公式描述了黑体在温度T下，波长λ处的辐射强度：
-     $$B(\lambda, T) = \frac{2hc^2}{\lambda^5} \frac{1}{e^{\frac{hc}{\lambda k_B T}} - 1}$$
-   - 其中，h是普朗克常数，c是光速，k_B是玻尔兹曼常数，T是绝对温度（单位：K）
+### 4. 主要任务
 
-2. **数值积分**：
-   - 计算辐射功率需要对辐射强度进行积分
-   - 可以使用梯形法则、辛普森法则或其他数值积分方法
-   - 也可以使用SciPy的integrate模块中的函数，如quad
+1.  **编码计算 $\eta(T)$：**
+    *   实现Python函数，输入 $T$，使用 `scipy.integrate.quad` 计算上述积分，返回效率 $\eta$。
+2.  **绘制 $\eta-T$ 曲线：**
+    *   在 300 K 到 10,000 K 范围内计算一系列 $(T, \eta)$ 数据点。
+    *   使用 `matplotlib` 绘图。
+3.  **寻找最优温度 $T_{opt}$：**
+    *   定义目标函数 (如 $-\eta(T)$ 以便使用最小化算法)。
+    *   使用黄金分割法 (可手动实现或调用 `scipy.optimize.minimize_scalar(method='golden')` 或 `fminbound`) 在合适的温度区间内搜索 $T_{opt}$，确保精度达到 1 K。
+4.  **分析与讨论：**
+    *   调研钨的熔点等特性。
+    *   比较 $T_{opt}$ 与钨的实际工作条件，分析差异原因及可行性。
 
-3. **最优化方法**：
-   - 黄金分割法是一种寻找单峰函数最大值或最小值的有效方法
-   - 也可以使用其他最优化方法，如牛顿法、梯度下降法等
-   - SciPy的optimize模块提供了多种最优化函数
+### 5. 物理常数
 
-4. **物理常数**：
-   - 普朗克常数 h = 6.62607015 × 10^-34 J·s
-   - 光速 c = 299792458 m/s
-   - 玻尔兹曼常数 k_B = 1.380649 × 10^-23 J/K
+*   $h = 6.626 \times 10^{-34} \text{ J} \cdot \text{s}$
+*   $c = 2.998 \times 10^8 \text{ m/s}$
+*   $k_B = 1.381 \times 10^{-23} \text{ J/K}$
+*   $\lambda_1 = 390 \times 10^{-9} \text{ m}$, $\lambda_2 = 750 \times 10^{-9} \text{ m}$
 
-5. **计算效率**：
-   - 为提高计算效率，可以考虑使用向量化操作
-   - 对于重复计算的部分，可以使用缓存或预计算
-   - 在绘制辐射谱时，可以使用对数刻度以更好地显示不同波长范围的变化
+### 6. 提交成果
+
+提交一份实验报告，包含：
+*   **简介与理论概述。**
+*   **Python关键代码** (附注释)。
+*   **结果展示：**
+    *   $\eta(T)$ 曲线图。
+    *   最优温度 $T_{opt}$ 和最大效率 $\eta_{max}$ 的值。
+*   **可行性分析讨论。**
+*   **结论。**
+
+---
+
+这个版本保留了核心要素，但大幅缩减了描述性文字。
