chore: 删除无用图片和缓存文件，更新文档和测试代码
- 删除blackbody_spectrum.png、optimal_temperature.png、efficiency_vs_temperature.png等无用图片
- 删除__pycache__目录下的缓存文件
- 更新探测周期性项目文档，修正数据获取方式
- 更新傅立叶滤波测试代码，使用solution模块替代student模块
- 新增探测周期性测试模块test_sunspot.py
- 更新傅立叶滤波解决方案文件路径
- 新增拉格朗日点测试模块test_lagrange.py
- 新增探测周期性学生代码模板sunspot_student.py
- 新增探测周期性解决方案sunspot_solution.py
- 新增薛定谔方程学生代码缓存文件schrodinger_student.cpython-311.pyc
- 新增探测周期性解决方案缓存文件sunspot_solution.cpython-311.pyc
- 新增薛定谔方程解决方案缓存文件schrodinger_solution.cpython-311.pyc
- 新增dow.txt数据文件

--- a/探测周期性/项目说明.md
+++ b/探测周期性/项目说明.md
@@ -9,7 +9,7 @@
 ## 项目任务
 
 1. **数据获取与可视化**：
-   - 从网址 http://www.sidc.be/silso/datafiles 下载太阳黑子数据（建议选择月平均的太阳黑子数据）
+   - 从网址 http://www.sidc.be/silso/datafiles 下载太阳黑子数据（建议选择月平均的太阳黑子数据）或者使用`sunspot_data.txt`
    - 数据包括从1749年1月开始的每个月观测到的太阳黑子数目
    - 参考INFO文件确定需要读入的数据列
    - 编写程序读取数据并绘制太阳黑子数量随时间的变化图
@@ -43,5 +43,4 @@
 
 4. **可视化建议**：
    - 在绘制功率谱时，可以只显示正频率部分，使图像更清晰
-   - 使用对数刻度（如plt.semilogy）可能有助于观察功率谱中的峰值
    - 在图中标记主要峰值的位置和对应的周期
