docs(实验报告): 简化实验报告内容
删除冗余的描述性文字，保留核心要素，使报告更加简洁明了

--- a/白炽灯的温度/项目说明.md
+++ b/白炽灯的温度/项目说明.md
@@ -44,16 +44,5 @@ $$
 *   $\lambda_1 = 390 \times 10^{-9} \text{ m}$, $\lambda_2 = 750 \times 10^{-9} \text{ m}$
 
 ### 6. 提交成果
+完成代码及实验报告。
 
-提交一份实验报告，包含：
-*   **简介与理论概述。**
-*   **Python关键代码** (附注释)。
-*   **结果展示：**
-    *   $\eta(T)$ 曲线图。
-    *   最优温度 $T_{opt}$ 和最大效率 $\eta_{max}$ 的值。
-*   **可行性分析讨论。**
-*   **结论。**
-
----
-
-这个版本保留了核心要素，但大幅缩减了描述性文字。
